kubernetes/yml/traefik/traefik-middleware.yml
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   #namespace: kube-system
#   name: auth-mid
# spec:
#   forwardAuth:
#    # address: http://172.18.12.17:9001/auth
#     trustForwardHeader: true
#     authResponseHeaders:
#     - X-Saas-Custom-token
#     - x-api-key
#     - x-service-data
#     - x-api-secret

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: kube-system
  name: replace-path-regex-mid
spec:
  replacePathRegex:
    regex: ^/([^/]+)/?(.*)$
    replacement: /$2

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: kube-system
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
