kubernetes/yml/traefik/nginx.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-test
  namespace: ddyw-member-test
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:  # 硬策略
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - cn-beijing.10.101.16.235
                - cn-beijing.10.101.16.236
        #   preferredDuringSchedulingIgnoredDuringExecution:  # 软策略
        #   - weight: 1
        #     preference:
        #       matchExpressions:
        #       - key: com
        #         operator: In
        #         values:
        #         - youdianzhishi
      containers:
      - name: nginx
        image: nginx:1.18.0-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: web
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: ddyw-member-test
spec:
  #type: NodePort
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 8001
  selector:
    app: nginx
