kubernetes/yml/traefik/traefik-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: traefik

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 443
  selector:
    app: traefik
