kubernetes/yml/traefik/traefik-http-https.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: kube-system
  name: web-ingress-http-to-https
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`test.com`)
    kind: Rule
    #priority: 1
    services:
    - name: nginx-test
      port: 80
    middlewares:
    - name: redirect-https
