kubernetes/yml/traefik/traefik-ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: kube-system
  name: web-ingress-front
  annotations:
    prometheus.io/http-probe: "true"
spec:
  entryPoints:
    - web
  tls:
    certResolver: foo
    domains:
     - main: "test.com"
       sans:
         - "*.test.com"
    passthrough: false
    options:
      name: tlsoption
      namespace: kube-system
  routes:
  - match: Host(`test.com`) && PathPrefix(`/test1`)
    kind: Rule
    services:
    - name: nginx-test1
      port: 8001
  - match: Host(`test.com`) && PathPrefix(`/test2`)
    kind: Rule
    services:
    - name: nginx-test2
      port: 8002
